Fix bug 557212, allocations above kOSAllocThreshold w/ alignment failing (r=lhansen)